--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,5 +27,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
+      working-directory: ./devforum/server
     - run: npm run build --if-present
-    - run: npm test
+      working-directory: ./devforum/server
+    - run: npm run test
+      working-directory: ./devforum/server
+      
