--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,10 @@ JWT_SECRET=
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=
+EMAIL_CONFIRMATION_URL=
+JWT_VERIFICATION_TOKEN_EXPIRATION_TIME=
+
+# Email Service
+EMAIL_SERVICE=gmail
+EMAIL_USER=avishka2k@gmail.com
+EMAIL_PASSWORD=rhgflysvhvabkxmr
