email varification status

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,11 +1,16 @@
-JWT_SECRET=
+# Mysql Configuration
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=
-EMAIL_CONFIRMATION_URL=
-JWT_VERIFICATION_TOKEN_EXPIRATION_TIME=
+
+# JWT Configuration
+JWT_SECRET=
+JWT_EXPIRATION_TIME=30d
 
 # Email Service
 EMAIL_SERVICE=gmail
 EMAIL_USER=avishka2k@gmail.com
-EMAIL_PASSWORD=rhgflysvhvabkxmr
+EMAIL_PASSWORD=
+EMAIL_CONFIRMATION_URL=
+EMAIL_CALLBACK_URL=
+EMAIL_TOKEN_EXPIRATION_TIME=600s
