--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Test and coverage
         run: npm run test:cov
+        working-directory: server
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
