--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 # sonar.projectKey=avishka2k_devforum_0ebd94e9-92d9-4963-8729-dbb4279776ee
 sonar.projectKey=avishka2k_devforum
 sonar.organization=avishka2k
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
