--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,8 +14,10 @@
     "url": "https://tailadmin.com"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^5.0.1",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
     "jsvectormap": "^1.5.3",
