--- a/server/package.json
+++ b/server/package.json
@@ -30,12 +30,15 @@
     "@nestjs/typeorm": "^10.0.2",
     "@types/nodemailer": "^6.4.15",
     "argon2": "^0.40.1",
+    "aws-sdk": "^2.1628.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "handlebars": "^4.7.8",
     "joi": "^17.13.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
