--- a/server/.env.example
+++ b/server/.env.example
@@ -14,3 +14,10 @@ EMAIL_PASSWORD=
 EMAIL_CONFIRMATION_URL=
 EMAIL_CALLBACK_URL=
 EMAIL_TOKEN_EXPIRATION_TIME=600s
+
+# DigitalOcean Spaces Configuration
+DO_SPACES_ENDPOINT=
+DO_SPACES_BUCKET=
+DO_SPACES_KEY=
+DO_SPACES_SECRET=
+DO_SPACES_CDN_ENDPOINT=
