--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@types/nodemailer": "^6.4.15",
     "argon2": "^0.40.1",
+    "aws-sdk": "^2.1628.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
     "handlebars": "^4.7.8",
     "joi": "^17.13.1",
     "mysql2": "^3.9.7",
+    "nanoid": "^5.0.7",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -51,6 +53,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
