--- a/server/.env.example
+++ b/server/.env.example
@@ -2,6 +2,8 @@
 MYSQL_HOST=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=
+MYSQL_DB=devforum_db
+MYSQL_PORT=3306
 
 # JWT Configuration
 JWT_SECRET=
@@ -21,3 +23,4 @@ DO_SPACES_BUCKET=
 DO_SPACES_KEY=
 DO_SPACES_SECRET=
 DO_SPACES_CDN_ENDPOINT=
+DO_SPACES_BUCKET_COVERS=
