--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,9 +14,14 @@
     "url": "https://tailadmin.com"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
+    "@mui/x-date-pickers": "^7.6.1",
     "@tinymce/tinymce-react": "^5.0.1",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
@@ -29,6 +34,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2"
   },
