--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "multer-s3": "^3.0.1",
     "mysql2": "^3.9.8",
     "nanoid": "^5.0.7",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
