--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,7 @@
 sonar.projectKey=avishka2k_devforum
 sonar.organization=avishka2k
 sonar.javascript.lcov.reportPaths=./server/coverage/lcov.info
+
+# Project paths
+sonar.sources=./server/src
+sonar.tests=./server/test
