--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.19",
     "@mui/x-date-pickers": "^7.6.1",
     "@tinymce/tinymce-react": "^5.0.1",
+    "@types/react-select": "^5.0.1",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
