--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,9 @@ jobs:
       - name: Install dependencies
         run: npm install
         working-directory: server
-      - name: Test and coverage
-        run: npm run test:cov
-        working-directory: server
+      # - name: Test and coverage
+      #   run: npm run test:cov
+      #   working-directory: server
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
