--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Install dependencies
-        run: npm install
-        working-directory: server
+      # - name: Install dependencies
+      #   run: npm install
+      #   working-directory: server
       # - name: Test and coverage
       #   run: npm run test:cov
       #   working-directory: server
