--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -37,7 +37,8 @@
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "twin.macro": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.17",
