--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,19 +16,29 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.19",
-    "@mui/x-date-pickers": "^7.6.1",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
+    "@mui/x-date-pickers": "^7.7.1",
     "@tinymce/tinymce-react": "^5.0.1",
+    "@types/datatables.net": "^1.12.0",
+    "@types/jquery": "^3.5.30",
     "@types/react-select": "^5.0.1",
     "apexcharts": "^3.41.0",
     "axios": "^1.7.2",
+    "datatables.net": "^2.0.8",
+    "datatables.net-dt": "^2.0.8",
+    "datatables.net-responsive": "^3.0.2",
+    "datatables.net-responsive-dt": "^3.0.2",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "flatpickr": "^4.6.13",
     "headlessui": "^0.0.0",
+    "jquery": "^3.7.1",
     "jsvectormap": "^1.5.3",
     "jwt-decode": "^4.0.0",
     "match-sorter": "^6.3.1",
+    "material-react-table": "^2.13.0",
+    "primereact": "^10.6.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
